# Antech

./: .gitignore  for_dev_notes.txt  pyproject.toml  requirements.txt
antech_grpc_server_v1/: app.py  config.py  setup.py
antech_grpc_server_v1/antech_grpc_server_v1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
antech_grpc_server_v1/models/: device_model.py
