[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antech_grpc_server_v1"
version = "0.1.0"
description = "A Python backend server using ChirpStack and MongoDB"
authors = [{name = "iViktro", email = "iViktro@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "chirpstack-api",
    "grpcio"
]
keywords = ["FastAPI", "ChirpStack", "MongoDB", "Python", "GRPC"]


[tool.setuptools.packages.find]
where = ["antech_grpc_server_v1"]
